--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <main>
             <div class="card-img"></div>
             <div class="card-info">
-                <p class="title">
+                <h1 class="title">
                     Improve your front-end skills by building projects
-                </p>
+                </h1>
                 <p class="description">
                     Scan the QR code to visit Frontend Mentor and take your
                     coding skills to the next level
